Fixed domain name
maybe broken in password reset

--- a/realestate/static/realestate/css/style.css
+++ b/realestate/static/realestate/css/style.css
@@ -1728,9 +1728,9 @@ footer .container .footer-newsletter input[type='submit'] {
   background-color: #EEE;
 }
 #logoimage{
-  width:300px;
+  width:200px;
   padding-top: 0px;
-  margin-top: -50px;
+  margin-top: -30px;
 }
 #forgot_password a {
   color:#000;
